# freedomtowin.github.io

./: .gitignore  2017-02-09-Pixel-Shift-Motion-Correction.html  2017-09-10-Image-Acquisition-FPGA-Simulation.html  2017-09-20-PhotoCoco.html  Cargo.toml  hobby  index.html  tmp_html.ipynb
.github/workflows/: gh_pages.yml
TMP/: hobby.pub
TMP/_posts/: 2018-02-09-Pixel-Shift-Motion-Correction.html  2019-02-18-KernelML-Kernel-Machine-Learning.html  2020-05-12-Deep-Autoregressive-Models.html
_includes/: footer.html
_posts/: 2016-04-05-Complex-Time-Series.html  2016-04-05-PhotoCoco.html  2017-02-09-AutoRegressive-Models-with-TensorFlow.html  2017-02-09-Pixel-Shift-Motion-Correction.html  2017-02-16-AutoRegressive-Models-with-TensorFlow.html  2017-02-18-KernelML-Kernel-Machine-Learning.html  2017-09-10-Image-Acquisition-FPGA-Simulation.html  2017-09-10-Parallel-Distributed-Cloud-Computing.md  2018-02-09-Pixel-Shift-Motion-Correction.html  2019-02-18-KernelML-Density-Factorization.html  2019-02-18-KernelML-HDR-Estimation.html  2019-02-18-KernelML-High-Density-Region-Estimation.html  2019-02-18-KernelML-Kernel-Machine-Learning.html  2019-05-09-Covariance-Matrix-Non-Gaussian-Mixture-Models.html  2019-12-11-KernelML-SVM-GPU.html  2020-02-25-Genetic-Direction-Based-Stochastic-Search.html  2020-04-04-KernelML-Hierarchical-Density-Factorization.html  2020-04-13-MATH_JAX_TEST.html  2020-05-12-Deep-Autoregressive-Models.html  Image-Acquisition-FPGA-Simulation.html
assets/: main.css  styles.css
docs/: index.html  tailwind.css
public/: tailwind.css
src/: main.rs
(+30 files in other folders)
